--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-merge": "^6.0.1"
   },
   "dependencies": {
-    "bootstrap": "^5.3.6"
+    "bootstrap": "^5.3.6",
+    "sweetalert2": "^11.22.0"
   }
 }
