--- a/package.json
+++ b/package.json
@@ -28,10 +28,15 @@
     "webpack": "^5.99.9",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.1",
-    "webpack-merge": "^6.0.1"
+    "webpack-merge": "^6.0.1",
+    "workbox-webpack-plugin": "^7.3.0"
   },
   "dependencies": {
     "bootstrap": "^5.3.6",
-    "sweetalert2": "^11.22.0"
+    "sweetalert2": "^11.22.0",
+    "workbox-cacheable-response": "^7.3.0",
+    "workbox-routing": "^7.3.0",
+    "workbox-strategies": "^7.3.0",
+    "workbox-window": "^7.3.0"
   }
 }
