--- a/package.json
+++ b/package.json
@@ -32,7 +32,10 @@
     "workbox-webpack-plugin": "^7.3.0"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.22.0",
     "bootstrap": "^5.3.6",
+    "install": "^0.13.0",
+    "npm": "^11.4.1",
     "sweetalert2": "^11.22.0",
     "workbox-cacheable-response": "^7.3.0",
     "workbox-routing": "^7.3.0",
